# docdiff

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/extractors/: docx.rs  mod.rs  rtf.rs  txt.rs
src/lib/: theme.svelte.ts
src/lib/components/: DiffViewer.svelte  DropZone.svelte  FileUploadPanel.svelte  Logo.svelte  ThemeToggle.svelte  ViewToggle.svelte
src/lib/services/: diffService.ts  fileService.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
