[package]
name = "doc-diff"
version = "0.2.2"
edition = "2021"

[lib]
name = "doc_diff_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
docx-rs = "0.4"
